<resources>
    <string name="app_name">YandexTestApp</string>

    <string name="data_loading_text">Data is loading. Please wait…</string>

    <string name="tab_stock">Stock</string>
    <string name="tab_favourite">Favourite</string>
    <string name="tab_crypto">Crypto</string>

    <string name="tab_chart">Chart</string>
    <string name="tab_summary">Summary</string>
    <string name="tab_news">News</string>
    <string name="tab_forecast">Forecast</string>
    <string name="tab_ideas">Ideas</string>

    <string name="find_company_or_ticker">Find company or ticker</string>

    <string name="popular_requests">Popular requests</string>
    <string name="user_requests">You’ve searched for this</string>

    <string name="stocks">Stocks</string>
    <string name="show_more">Show more</string>


    <string name="btn_chart_day">D</string>
    <string name="btn_chart_week">W</string>
    <string name="btn_chart_month">M</string>
    <string name="btn_chart_6_month">6M</string>
    <string name="btn_chart_year">Y</string>
    <string name="btn_chart_all">All</string>

    <string name="ceo_title">CEO: </string>
    <string name="website_title">Website: </string>
    <string name="contact_phone_title">Contact phone: </string>
    <string name="company_address_title">Company address: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_favorite">add_to_favourite</string>
</resources>